Vine group assigning added
