# vitis-vision-back-end/src/main/java/com/vitisvision/vitisvisionservice/domain/vine/service/VineService.java
@@ -110,27 +110,6 @@ public class VineService {
     }
 
     /**
-     * Get all vines in a block without a certain group
-     *
-     * @param pageable  the pageable object containing the pagination details
-     * @param blockId   the block id
-     * @param groupId   the group id
-     * @param principal the principal object containing the user details
-     * @return the response entity containing the response object
-     */
-    @PreAuthorize("hasAuthority('vine:read')")
-    @Transactional
-    public Page<VineResponse> getVinesWithoutCertainGroup(
-            Pageable pageable, Integer blockId,
-            Integer groupId, Principal principal
-    ) {
-        // Ensure that the user has access to the block
-        blockService.ensureBlockAccess(blockId, principal);
-        return vineRepository.findAllByBlock_IdAndGroupsNotContaining(groupId, pageable)
-                .map(vineResponseMapper);
-    }
-
-    /**
      * Update the vine details in a block with the provided details
      *
      * @param vineRequest the request object containing the vine details
@@ -210,6 +189,17 @@ public class VineService {
      */
     public Page<Vine> getAllVinesWithIds(List<Integer> vineIds, Pageable pageable) {
         return vineRepository.findAllByIds(pageable, vineIds);
+    }
+
+    /**
+     * Get all vines not in the provided ids
+     *
+     * @param groupVineIds the list of vine ids
+     * @param pageable     the pageable object containing the pagination details
+     * @return the page object containing the vine objects
+     */
+    public Page<Vine> getAllVinesNotInIds(List<Integer> groupVineIds, Pageable pageable) {
+        return vineRepository.findAllNotInIds(pageable, groupVineIds);
     }
 
     /**
