# vitis-vision-front-end/src/app/core/api/models/api-response-pageable-response-list-vine-response.ts
@@ -1,7 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
-import { ApiError } from '../models/api-error';
-import { PageableResponseListVineResponse } from '../models/pageable-response-list-vine-response';
+import { ApiError } from './api-error';
+import { PageableResponseListVineResponse } from './pageable-response-list-vine-response';
 export interface ApiResponsePageableResponseListVineResponse {
   data?: PageableResponseListVineResponse;
   errors?: Array<ApiError>;
